@@ -404,6 +404,7 @@ plugin-manager.installUser=true
 plugin-manager.showAll=true
 plugin-manager.mirror.id=NONE
 plugin-manager.deleteDownloads=true
+plugin-manager.hide-libraries.toggle=true
 #}}}
 
 #{{{ Hidden settings
